--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "zero2prod"
 version = "0.1.0"
+authors = ["Luciano Correia <luciano.correia@gmail.com>" ]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
+actix-web = "3.3.2"
+actix-http = "2.2.1"
