--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,15 @@ edition = "2018"
 [lib]
 path = "src/lib.rs"
 
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
 [dependencies]
 actix-web = "3.3.2"
 actix-http = "2.2.1"
+reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
+
+[dev-dependencies]
+actix-rt = "2.2.0"
+tokio = { version = "1.12.0", features = ["macros"] }
